# auto-scribe

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  DEV.md  Justfile  README.md  __Workflow__.md  animated_tray_icon_idea.md  data.json
.claude/: settings.local.json
.pm/: user.json
.refactor-radar/: config.toml
crates/auto-scribe/: Cargo.toml  DEV.md  README.md
crates/auto-scribe-core/: Cargo.toml
crates/auto-scribe-core/src/: lib.rs
crates/auto-scribe-core/src/audio/: capture.rs  engine.rs  manager.rs  mod.rs  resampler.rs
crates/auto-scribe-core/src/error/: mod.rs
crates/auto-scribe-core/src/tests/audio/: capture.rs  engine.rs  manager.rs  mod.rs  resampler.rs
crates/auto-scribe/data/: dev.gpui.AutoScribe.desktop
crates/auto-scribe/src/: app.rs  app_command.rs  control_key_guard.rs  hotkey_handler.rs  icon.rs  main.rs  output_handler.rs  recording_state.rs  tray_command.rs  tray_icon_state.rs  tray_manager.rs
crates/auto-scribe/src/config/: audio_config.rs  behaviour_config.rs  config.rs  mod.rs  server_config.rs  whisper_config.rs
crates/auto-scribe/src/error/: mod.rs
crates/auto-scribe/src/hotkey/: controller.rs  snapshot.rs  wayland.rs
crates/auto-scribe/src/stt/: audio_recorder.rs  mod.rs  model_config.rs  model_dir.rs  model_download.rs  recorder_state.rs  session.rs  snapshot.rs  speaker_mute.rs  state.rs  stt_error.rs  worker_event.rs  worker_runtime.rs
crates/auto-scribe/src/tests/: hotkey.rs  mod.rs  output_handler.rs
crates/auto-scribe/src/windows/: hotkey_window.rs  main_window.rs  xrandr_size.rs
crates/hotkey-hold-app/: Cargo.toml
crates/hotkey-hold-app/src/: icon.rs  main.rs
crates/hotkey-hold-app/src/error/: app_error.rs  result_context.rs
crates/hotkey-hold-app/src/hotkey/: controller.rs  mod.rs  native.rs  wayland.rs
crates/hotkey-hold-app/src/stt/: audio_recording.rs  model_dir.rs  state.rs  stt_error.rs  stt_result.rs  worker_request.rs
crates/hotkey-hold-app/src/windows/: hotkey_window.rs  hotkey_window_placement.rs  main_window.rs  mod.rs  xrandr_geometry.rs
crates/wip/: Cargo.toml
crates/wip/src/: app.rs  app_state.rs  audio_recorder.rs  audio_recording.rs  main.rs  recorder_state.rs  work_event.rs  worker_request.rs
crates/wip/src/error/: error.rs  mod.rs  result.rs
scripts/: install.sh
