[workspace]
members = [
    "crates/auto-scribe"
]
exclude = [
    "submodules/gpui-component",
    "submodules/zed"
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
ashpd                 = { version = "0.13.11", default-features = false, features = ["async-io", "global_shortcuts"] }
async-channel         = { version = "2.5.0" }
cpal                  = { version = "0.18.1" }
error-location        = { version = "0.1.0" }
futures-util          = { version = "0.3.32" }
global-hotkey         = { version = "0.8.0" }
image                 = { version = "0.25.10" }
ort                   = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "api-24", "cuda"] }
parakeet-rs           = { version = "0.3.6", features = ["cuda"] }
pollster              = { version = "0.4.0" }
rubato                = { version = "3.0.0" }
thiserror             = { version = "2.0.18" }
toml                  = { version = "1.1.2" }
ureq                  = { version = "3.3.0", default-features = false, features = ["native-tls"] }

# submodules
gpui                  = { path = "submodules/zed/crates/gpui" }
gpui-component        = { path = "submodules/gpui-component/crates/ui" }
gpui-component-assets = { path = "submodules/gpui-component/crates/assets" }
gpui_platform         = { path = "submodules/zed/crates/gpui_platform", features = ["font-kit", "wayland", "x11"] }

[patch."https://github.com/zed-industries/zed"]
gpui                  = { path = "submodules/zed/crates/gpui" }
gpui_macros           = { path = "submodules/zed/crates/gpui_macros" }

[workspace.lints.clippy]
unwrap_used           = "deny"
expect_used           = "deny"
panic                 = "deny"

[workspace.lints.rust]
unused_must_use       = "deny"
