[package]
name = "auto-scribe-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
integration-tests = []
metal = ["whisper-rs/metal"]
vulkan = ["whisper-rs/vulkan"]

[dependencies]
audioadapter-buffers = { workspace = true }
cpal = { workspace = true }
error-location = { workspace = true }
rubato = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
whisper-rs = { workspace = true }
