[package]
name = "auto-scribe"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
arboard = { workspace = true }
core-foundation = { workspace = true }
directories = { workspace = true }
enigo = { workspace = true }
error-location = { workspace = true }
global-hotkey = { workspace = true }
image = { workspace = true }
thiserror = { workspace = true }
open = { workspace = true }
serde = { workspace = true }
tao = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tray-icon = { workspace = true }
uuid = { workspace = true }

auto-scribe-core = { workspace = true }
