[package]
name = "wip"
version.workspace = true
edition.workspace = true

[dependencies]
cpal              = { workspace = true }
crossbeam-channel = { workspace = true }
eframe            = { workspace = true }
error-location    = { workspace = true }
parakeet-rs       = { workspace = true }
rubato            = { workspace = true }
thiserror         = { workspace = true }

[lints]
workspace         = true
